# nflplotpy

./: .gitignore  ADVANCED_FEATURES_GUIDE.md  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT_GAP_ANALYSIS.md  FEATURE_PARITY_ANALYSIS.md  FIXES_SUMMARY.md  GETTING_STARTED_TUTORIAL.md  LICENSE  QUICK_START.md  README.md  RELEASE_SUMMARY.md  TESTING_RESULTS.md  WORDMARKS_AND_HEADSHOTS_IMPLEMENTATION.md  ci_check.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
core/: __init__.py  assets.py  colors.py  logos.py  plotting.py  utils.py
data/: __init__.py  team_info.py
examples/: 2024_nfl_team_epa_data.csv  README.md  advanced_features_demo.py  interactive_team_wordmarks.html  interactive_team_wordmarks.py  nfl_examples.py  nflplotpy_demo.py  pandas_tables_showcase.py  qb_headshots_analysis.py  quick_test.py  table_examples.py  team_wordmarks_matplotlib.py  validate_player_ids.py
matplotlib/: artists.py  elements.py  scales.py
nflplotpy/: __init__.py
nflplotpy/core/: __init__.py  assets.py  colors.py  logos.py  nfl_data_integration.py  plotting.py  urls.py  utils.py
nflplotpy/data/: __init__.py  team_info.py
nflplotpy/matplotlib/: __init__.py  artists.py  elements.py  preview.py  scales.py
nflplotpy/pandas/: __init__.py  styling.py
nflplotpy/plotly/: __init__.py  layouts.py  traces.py
nflplotpy/seaborn/: __init__.py  styles.py
pandas/: styling.py
seaborn/: styles.py
tests/: __init__.py  test_core.py  test_logos.py  test_matplotlib.py  test_new_features.py  test_plotting.py  test_plotting_comprehensive.py
